changes in content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       Reduce food waste, save money, and discover new flavors with your personal kitchen companion.
     </p>
     <div class="buttons">
-      <a href="#" class="btn primary">Start Cooking Smart 🔍</a>
+      <a href="#" class="btn primary">Start Cooking Smart</a>
       <a href="#" class="btn secondary">Watch Demo</a>
     </div>
   </section>
