--- a/ingredients.html
+++ b/ingredients.html
@@ -39,8 +39,8 @@
     <div class="input-sections">
       <!-- Upload Image -->
       <div class="upload-box">
-        <h2><div class="method-icon">📸</div>Snap Your Fridge</h2>
-        <p>Upload a photo of your ingredients for instant recognition</p>
+        <h2><div class="method-icon">📸</div>Snap Your Ingredients</h2>
+        <p>Upload a photo of your fridge, groceries, or leftovers — anything you’ve got, and we’ll turn it into recipes for you!</p>
         <label class="upload-btn">
           <input type="file" hidden>
           Choose Photo
