common ingredients logic added

--- a/pages/ingredients.html
+++ b/pages/ingredients.html
@@ -34,7 +34,7 @@
   <!-- Main Section -->
   <section class="ingredients-container">
     <h1>What ingredients do you have?</h1>
-    <p class="subtitle">Tell us what's in your fridge and we'll create magic ✨</p>
+    <p class="subtitle">Tell us which ingredients you have available and we'll create magic ✨</p>
 
     <div class="input-sections">
       <!-- Upload Image -->
@@ -67,13 +67,7 @@
       <p>Need inspiration? Try these common ingredients:</p>
       <div class="tags">
         <span>🍗 Chicken</span>
-        <span>🍚 Rice</span>
-        <span>🥚 Eggs</span>
-        <span>🍝 Pasta</span>
-        <span>🥔 Potatoes</span>
-        <span>🧅 Onions</span>
-        <span>🧄 Garlic</span>
-        <span>🍅 Tomatoes</span>
+        <!-- dynamically rendered -->
       </div>
     </div>
   </section>
