--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -26,8 +26,8 @@
     <div class="logo">ReciP</div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="about.html">About</a>
+      <a href="about.html">Contact</a>
     </nav>
     <div class="hamburger">☰</div>
   </header>
