--- a/pages/about.html
+++ b/pages/about.html
@@ -33,6 +33,7 @@
       color: #4b9049;
       font-size: 28px;
       margin: 0;
+      letter-spacing: -1px;
     }
 
     h2 span{
@@ -67,7 +68,7 @@
     section h2 {
       font-size: 36px;
       margin-bottom: 20px;
-      color: #2d7a2d;
+      color: #4b9049;
       animation: bounceIn 1s ease both;
     }
     section p {
@@ -213,14 +214,14 @@
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="about.html">Contact</a>
+      <a href="about.html#contact">Contact</a>
     </nav>
     <div class="hamburger">☰</div>
   </header>
 
   <!-- About Section -->
   <section id="about">
-    <h2>About <span>ReciP</span></h2>
+    <h2>About&nbsp;&nbsp;<span>ReciP</span></h2>
     <p>
       Welcome to <strong>ReciP</strong> – your kitchen’s smartest companion! 🎉
     </p>
