--- a/pages/ingredients.html
+++ b/pages/ingredients.html
@@ -26,7 +26,7 @@
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="about.html">Contact</a>
+      <a href="about.html#contact">Contact</a>
     </nav>
     <div class="hamburger">☰</div>
   </header>
