changed index to root

--- a/pages/about.html
+++ b/pages/about.html
@@ -212,7 +212,7 @@
   <header>
     <div class="logo">ReciP</div>
     <nav class="nav-links">
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
       <a href="about.html">About</a>
       <a href="about.html#contact">Contact</a>
     </nav>
@@ -254,7 +254,7 @@
     <p class="slogan">
       <em><strong>ReciP</strong> – Cook Smart. Waste Less. Live Better.</em>
     </p>
-    <a href="index.html" class="btn btn-orange">Back to Home</a>
+    <a href="../index.html" class="btn btn-orange">Back to Home</a>
   </section>
 
   <!-- Contact Section -->
