--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ReciP</title>
-  <link rel="stylesheet" href="../styles/styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
@@ -18,8 +18,8 @@
     <div class="logo">ReciP</div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="about.html#contact">Contact</a>
+      <a href="pages/about.html">About</a>
+      <a href="pages/about.html#contact">Contact</a>
     </nav>
     <div class="hamburger">☰</div>
   </header>
@@ -33,7 +33,7 @@
       Reduce food waste, save money, and discover new flavors with your personal kitchen companion.
     </p>
     <div class="buttons">
-      <a href="ingredients.html" class="btn primary">Start Cooking Smart</a>
+      <a href="pages/ingredients.html" class="btn primary">Start Cooking Smart</a>
       <a href="#" class="btn secondary">Watch Demo</a>
     </div>
   </section>
@@ -54,6 +54,6 @@
     <span>🍄</span>
   </div>
 
-  <script src="../script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
