--- a/pages/ingredients.html
+++ b/pages/ingredients.html
@@ -24,7 +24,7 @@
   <header>
     <div class="logo">ReciP</div>
     <nav class="nav-links">
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
       <a href="about.html">About</a>
       <a href="about.html#contact">Contact</a>
     </nav>
@@ -58,7 +58,7 @@
 
     <!-- Buttons -->
     <div class="btn-group">
-      <a href="index.html" class="btn secondary">←&nbsp;&nbsp;Back to Home</a>
+      <a href="../index.html" class="btn secondary">←&nbsp;&nbsp;Back to Home</a>
       <a href="recipes.html"><button class="btn primary">Find Recipes</button></a>
     </div>
 
