--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -25,7 +25,7 @@
   <header>
     <div class="logo">ReciP</div>
     <nav class="nav-links">
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
       <a href="about.html">About</a>
       <a href="about.html#contact">Contact</a>
     </nav>
