--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       Reduce food waste, save money, and discover new flavors with your personal kitchen companion.
     </p>
     <div class="buttons">
-      <a href="pages/ingredients.html" class="btn primary">Start Cooking Smart</a>
+      <a href="pages/ingredients.html" class="btn btn-primary">
+        Start Cooking Smart
+      </a>
       <a href="#" class="btn secondary">Watch Demo</a>
     </div>
   </section>
