--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -109,5 +109,8 @@
     <a href="ingredients.html"><button class="btn btn-outline">+ Add More Ingredients</button></a>
     <a href="recipes.html"><button class="btn btn-primary">Get More Recipes</button></a>
   </div>
+  <footer>
+    <p>© 2025 ReciP | All Rights Reserved</p>
+  </footer>
 </body>
 </html>
