--- a/index.html
+++ b/index.html
@@ -40,6 +40,50 @@
     </div>
   </section>
 
+  <!-- How It Works Section -->
+  <section id="how-it-works">
+    <h2>How It Works</h2>
+    <div class="features">
+      <div class="feature-box">
+        <span>📸</span>
+        <h3>Snap a Photo</h3>
+        <p>Take a picture of your fridge or leftover ingredients. ReciP’s AI will detect what’s inside.</p>
+      </div>
+      <div class="feature-box">
+        <span>🤖</span>
+        <h3>AI Suggests Recipes</h3>
+        <p>Our smart system instantly suggests creative, delicious recipes you can cook with what you have.</p>
+      </div>
+      <div class="feature-box">
+        <span>🍴</span>
+        <h3>Cook & Enjoy</h3>
+        <p>Follow easy-to-make recipes, enjoy your meal, and feel proud of reducing food waste.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Why Choose ReciP Section -->
+  <section id="why-choose">
+    <h2>Why Choose ReciP?</h2>
+    <div class="features">
+      <div class="feature-box">
+        <span>🌍</span>
+        <h3>Sustainable Living</h3>
+        <p>Every recipe saves food from going to waste, making your kitchen more eco-friendly.</p>
+      </div>
+      <div class="feature-box">
+        <span>💸</span>
+        <h3>Save Money</h3>
+        <p>Use what’s already in your kitchen to prepare meals and cut down your grocery expenses.</p>
+      </div>
+      <div class="feature-box">
+        <span>⚡</span>
+        <h3>AI-Powered</h3>
+        <p>Smart suggestions that go beyond basics—helping you explore new flavors and cuisines.</p>
+      </div>
+    </div>
+  </section>
+
   <!-- Floating background emojis -->
   <div class="floating-bg">
     <span>🥬</span>
@@ -55,7 +99,11 @@
     <span>🥒</span>
     <span>🍄</span>
   </div>
+  <footer>
+    <p>© 2025 ReciP | All Rights Reserved</p>
+  </footer>
 
   <script src="script.js"></script>
+  
 </body>
 </html>
