--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -1,117 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ReciP - Recipes For You</title>
-  <link rel="stylesheet" href="../styles/styles.css">
-  <link rel="stylesheet" href="../styles/recipes-styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
-  <script src="../script.js" defer></script>
-</head>
-<body>
-  
-  <!-- Navbar -->
-  <header>
-    <div class="logo">ReciP</div>
-    <nav class="nav-links">
-      <a href="../index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="about.html#contact">Contact</a>
-    </nav>
-    <div class="hamburger">☰</div>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ReciP - Recipes For You</title>
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/recipes-styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap"
+      rel="stylesheet"
+    />
+    <script src="../script.js" defer></script>
+  </head>
+  <body>
+    <!-- Navbar -->
+    <header>
+      <div class="logo">ReciP</div>
+      <nav class="nav-links">
+        <a href="../index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="about.html#contact">Contact</a>
+      </nav>
+      <div class="hamburger">☰</div>
+    </header>
 
-  <!-- Heading -->
-  <div class="heading">
-    <h1>Recipes for You</h1>
-    <p>Based on your ingredients, here are some delicious recipes you can make right now!</p>
-  </div>
+    <!-- Heading -->
+    <div class="heading">
+      <h1>Recipes for You</h1>
+      <p>
+        Based on your ingredients, here are some delicious recipes you can make
+        right now!
+      </p>
+    </div>
 
-  <!-- Recipe Cards -->
-  <div class="cards">
-    <div class="card">
-      <div class="card-header">
-        <img class ="recipe-image" src="../assets/Creamy-Garlic-Pasta.jpg" alt="Creamy Garlic Pasta">
-        <span class="badge">Easy</span>
-      </div>
-      <div class="card-body">
-        <h3>Creamy Garlic Pasta</h3>
-        <div class="meta">⏱ 25 mins • 🍽 4 servings</div>
-        <p class="desc">A rich and creamy pasta dish with garlic, herbs, and parmesan cheese that’s perfect for any weeknight dinner.</p>
-        <div class="tags">
-          <span class="tag">Pasta</span>
-          <span class="tag">Garlic</span>
-          <span class="tag">Cream</span>
+    <!-- Recipe Cards -->
+    <div class="cards">
+      <div class="card">
+        <div class="card-header">
+          <img
+            class="recipe-image"
+            src="../assets/Creamy-Garlic-Pasta.jpg"
+            alt="Creamy Garlic Pasta"
+          />
+          <span class="badge">Easy</span>
         </div>
-        <a href="#" class="recipe-link">
-                View Recipe
-                <span class="link-arrow">→</span>
-        </a>
+        <div class="card-body">
+          <h3>Creamy Garlic Pasta</h3>
+          <div class="meta">⏱ 25 mins • 🍽 4 servings</div>
+          <p class="desc">
+            A rich and creamy pasta dish with garlic, herbs, and parmesan cheese
+            that’s perfect for any weeknight dinner.
+          </p>
+          <div class="tags">
+            <span class="tag">Pasta</span>
+            <span class="tag">Garlic</span>
+            <span class="tag">Cream</span>
+          </div>
+          <a href="#" class="recipe-link">
+            View Recipe
+            <span class="link-arrow">→</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <img
+            class="recipe-image"
+            src="../assets/Mediterranean-Garden-Salad.jpg"
+            alt="Mediterranean Garden Salad"
+          />
+          <span class="badge">Quick</span>
+        </div>
+        <div class="card-body">
+          <h3>Mediterranean Garden Salad</h3>
+          <div class="meta">⏱ 15 mins • 🍽 2 servings</div>
+          <p class="desc">
+            Fresh and vibrant salad with tomatoes, cucumbers, olives, and feta
+            cheese dressed in olive oil and herbs.
+          </p>
+          <div class="tags">
+            <span class="tag">Tomatoes</span>
+            <span class="tag">Cucumber</span>
+            <span class="tag">Feta</span>
+          </div>
+          <a href="#" class="recipe-link">
+            View Recipe
+            <span class="link-arrow">→</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <img
+            class="recipe-image"
+            src="../assets/Rainbow-Vegetable-Stir-Fry.jpg"
+            alt="Rainbow Vegetable Stir Fry"
+          />
+          <span class="badge">Medium</span>
+        </div>
+        <div class="card-body">
+          <h3>Rainbow Vegetable Stir Fry</h3>
+          <div class="meta">⏱ 20 mins • 🍽 3 servings</div>
+          <p class="desc">
+            Colorful and nutritious stir fry with mixed vegetables, ginger, and
+            soy sauce served over rice.
+          </p>
+          <div class="tags">
+            <span class="tag">Mixed Veg</span>
+            <span class="tag">Ginger</span>
+            <span class="tag">Soy Sauce</span>
+          </div>
+          <a href="#" class="recipe-link">
+            View Recipe
+            <span class="link-arrow">→</span>
+          </a>
+        </div>
       </div>
     </div>
 
-    <div class="card">
-      <div class="card-header">
-        <img class ="recipe-image" src="../assets/Mediterranean-Garden-Salad.jpg" alt="Mediterranean Garden Salad">
-        <span class="badge">Quick</span>
-      </div>
-      <div class="card-body">
-        <h3>Mediterranean Garden Salad</h3>
-        <div class="meta">⏱ 15 mins • 🍽 2 servings</div>
-        <p class="desc">Fresh and vibrant salad with tomatoes, cucumbers, olives, and feta cheese dressed in olive oil and herbs.</p>
-        <div class="tags">
-          <span class="tag">Tomatoes</span>
-          <span class="tag">Cucumber</span>
-          <span class="tag">Feta</span>
-        </div>
-        <a href="#" class="recipe-link">
-                View Recipe
-                <span class="link-arrow">→</span>
-        </a>
-      </div>
+    <!-- Buttons -->
+    <div class="btn-container">
+      <a href="ingredients.html"
+        ><button class="btn btn-outline">+ Add More Ingredients</button></a
+      >
+      <a href="recipes.html"
+        ><button class="btn btn-primary">Get More Recipes</button></a
+      >
     </div>
 
-    <div class="card">
-      <div class="card-header">
-        <img class ="recipe-image" src="../assets/Rainbow-Vegetable-Stir-Fry.jpg" alt="Rainbow Vegetable Stir Fry">
-        <span class="badge">Medium</span>
-      </div>
-      <div class="card-body">
-        <h3>Rainbow Vegetable Stir Fry</h3>
-        <div class="meta">⏱ 20 mins • 🍽 3 servings</div>
-        <p class="desc">Colorful and nutritious stir fry with mixed vegetables, ginger, and soy sauce served over rice.</p>
-        <div class="tags">
-          <span class="tag">Mixed Veg</span>
-          <span class="tag">Ginger</span>
-          <span class="tag">Soy Sauce</span>
-        </div>
-        <a href="#" class="recipe-link">
-                View Recipe
-                <span class="link-arrow">→</span>
-        </a>
-      </div>
-    </div>
-  </div>
+    <!-- Floating Food Background -->
+    <div class="floating-food">🍎</div>
+    <div class="floating-food">🍕</div>
+    <div class="floating-food">🥕</div>
+    <div class="floating-food">🍗</div>
+    <div class="floating-food">🥦</div>
+    <div class="floating-food">🍋</div>
 
-  <!-- Buttons -->
-  <div class="btn-container">
-    <a href="ingredients.html"><button class="btn btn-outline">+ Add More Ingredients</button></a>
-    <a href="recipes.html"><button class="btn btn-primary">Get More Recipes</button></a>
-  </div>
-
-  <!-- Floating Food Background -->
-  <div class="floating-food">🍎</div>
-  <div class="floating-food">🍕</div>
-  <div class="floating-food">🥕</div>
-  <div class="floating-food">🍗</div>
-  <div class="floating-food">🥦</div>
-  <div class="floating-food">🍋</div>
-  
-  <footer>
-    <p>© 2025 ReciP | All Rights Reserved</p>
-  </footer>
-</body>
+    <footer>
+      <p>© 2025 ReciP | All Rights Reserved</p>
+    </footer>
+  </body>
 </html>
